Fixed width of add purchase order button to support increased content length to prevent overflow

--- a/resources/sass/invoices.scss
+++ b/resources/sass/invoices.scss
@@ -42,7 +42,7 @@ th, td {
   padding-top: 3px;
   padding-bottom: 6px;
   margin-bottom: 1.4em;
-  width: 202px;
+  width: 300px;
   vertical-align: middle;
 }
 
